welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:6: error: value =< is not a member of Int
    if (cigars >= 40 && cigars =< 60) {return true}
                               ^